--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -15,4 +15,7 @@
     <string name="btn_sign_up">Sign up</string>
     <string name="btn_text_signup">Already have an account? Login</string>
     <string name="privacy_policy">By creating an account, you agree to our \n<a href="https://google.com">Terms &amp; Conditions</a> and agree to <a href="https://google.com">Privacy Policy.</a></string>
+    <string name="close">Close</string>
+    <string name="open">Open</string>
+    <string name="more_options">More Options</string>
 </resources>
